--- a/Java/azureopenaiexample/src/main/resources/static/creatembeddings.html
+++ b/Java/azureopenaiexample/src/main/resources/static/creatembeddings.html
@@ -25,7 +25,14 @@
 		<h1>Create Embeddings</h1>
 	</header>
 	<main>
+		<div>
+			This Submit button performs following.<br>
+			1. Chunks PDF file placed in resources/data folder.<br>
+			2. Creates embeddings for chunked data.<br>
+			3. Saves embeddings in Pincone vector database.<br>
+		</div>
 		<div class="container">
+			<br>
             <button onclick="callCreateEmbeddingsAPI()">Submit</button>
 
 		</div>
